# kgateway

./: .gitattributes  .gitignore  .golangci.yaml  .goreleaser.yaml  CONTRIBUTING.md  Makefile  README.md  Tiltfile  go.mod  go.sum  tilt-settings.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-ISSUE.yml  FEATURE-ISSUE.yml
.github/workflows/: README.md  action_lint.yaml  cherrypick.yaml  conformance-tests.yaml  labeler.yaml  lint-helm.yaml  lint-python.yaml  lint-rust.yaml  merge-queue-delete.yaml  nightly-tests.yaml  pr-kubernetes-tests.yaml  pr-unit-tests.yaml  regression-tests.yaml  release.yaml  static-analysis.yaml
api/: README.md
api/annotations/: delegation.go  gateway.go  policy.go  routes.go
api/applyconfiguration/: utils.go
api/labels/: delegation.go
api/v1alpha1/: ai_backend.go  ai_policy.go  (+18 more)
design/: 10381.md  10411.md  10494.md  10573.md  10574.md  10625.md  10683.md  10851.md  10943.md  11150.md  11173.md  11177.md  11192.md  11210.md  11268.md  11303.md  11376.md  11387.md  11466.md  11584.md  11741.md  template.md
devel/: README.md
docs/: global-rate-limiting.md  quick-start-ai-gateway-locally.md
examples/: example-http-listener-policy-with-additional-fields.yaml
hack/: generate.sh
internal/envoyinit/rustformations/: Cargo.toml  Makefile
internal/envoyinit/rustformations/src/: http_simple_mutations.rs  lib.rs
python/: Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
test/kubernetes/e2e/features/agentgateway/a2a-example/: Dockerfile  README.md  main.py  pyproject.toml
(+1689 files in other folders)
